# fastapi-telegram-image-notifier

./: .gitignore  README.md  app.py  bot.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3210452ec82f_initial_tables.py  6d56fbc5ca3d_first_migration.py  a3bfbe2f225c_first_migration.py
api/: app.py  config.py
api/routers/: images.py
api/services/: bot_service.py  image_service.py
bot/: bot.py  config.py
bot/handlers/: __init__.py  handlers.py  img_form.py
bot/keyboards/: callback_data.py  main_menu.py
bot/middlewares/: db.py
bot/states/: states.py
bot/static/: static_text.py
bot/utils/: utils.py
config/: config.py
database/: __init__.py  base.py  crud.py  dependencies.py  session.py
database/models/: models.py
db/: models.py
