[project]
name = "fastapi-telegram-image-notifier"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram (>=3.19.0,<4.0.0)",
  "fastapi (>=0.115.11,<0.116.0)",
  "uvicorn (>=0.34.0,<0.35.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "sqlalchemy (>=2.0.40,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
